SDB Change Log
==============

Homepage:	http://jena.sf.net/SDB
Wiki:      	http://jena.hpl.hp.com/wiki/SDB

SDB Beta 1
==========

Databases tested:
+ Oracle 10gR2, Microsoft SQL Server 2005, PostgreSQL 8.2,
  MySQL 5.0 , Apache Derby 10.2, HSQLDB 1.8.
  Please report ealier versions that pass the test suite.

+ Database schema change for Microsoft SQL Server for new databases to
  allow full internationalization support.  Old databases continue to work.
  Reformatting and reloading data recommended.


SDB Alpha 2
===========

The namespace for store description assembler files is
now <http://jena.hpl.hp.com/2007/sdb#>.  This is a change from
alpha-1.