@@ -5,9 +5,14 @@
 
 _:c rdf:type sdb:SDBConnection ;
 
-    sdb:sdbType        "oracle:thin" ;
-    sdb:sdbHost        "localhost:1521" ;
-    sdb:sdbName        "XE" ;
+    sdb:sdbType        "oracle" ;
+    sdb:sdbHost        "localhost" ;
+    sdb:sdbName        "XE" ;       # Oracle SID
+
+    # With OracleXE, it can be useful to use the user/password
+    # to give multiple stores in the same installation.
+    sdb:sdbUser        "DB" ;
+    sdb:sdbPassword    "password" ;
     .
 
 [] rdf:type sdb:Store ;
